name: lean-http-client
version: 0.1
synopsis: Focused declarative HTTP client
homepage: https://github.com/nikita-volkov/lean-http-client
bug-reports: https://github.com/nikita-volkov/lean-http-client/issues
author: Nikita Volkov <nikita.y.volkov@mail.ru>
maintainer: Nikita Volkov <nikita.y.volkov@mail.ru>
copyright: (c) 2020 Nikita Volkov
license: MIT
license-file: LICENSE
build-type: Simple
cabal-version: >=1.10

source-repository head
  type: git
  location: git://github.com/nikita-volkov/lean-http-client.git

library
  hs-source-dirs: library
  default-extensions: BangPatterns, BlockArguments, ConstraintKinds, DataKinds, DefaultSignatures, DeriveDataTypeable, DeriveFoldable, DeriveFunctor, DeriveGeneric, DerivingVia, DeriveTraversable, EmptyDataDecls, FlexibleContexts, FlexibleInstances, FunctionalDependencies, GADTs, GeneralizedNewtypeDeriving, InstanceSigs, LambdaCase, LiberalTypeSynonyms, MagicHash, MultiParamTypeClasses, MultiWayIf, NoImplicitPrelude, NoMonomorphismRestriction, OverloadedLists, OverloadedStrings, PatternGuards, ParallelListComp, QuasiQuotes, RankNTypes, RecordWildCards, ScopedTypeVariables, StandaloneDeriving, StrictData, TemplateHaskell, TupleSections, TypeFamilies, TypeOperators, UnboxedTuples
  default-language: Haskell2010
  exposed-modules:
    LeanHttpClient
  other-modules:
    LeanHttpClient.Mason
    LeanHttpClient.Prelude
  build-depends:
    aeson >=1 && <2,
    aeson-value-parser >=0.19 && <0.20,
    attoparsec >=0.13 && <0.14,
    attoparsec-data >=1.0.4 && <1.1,
    base >=4.9 && <5,
    bytestring >=0.10 && <0.11,
    bytestring-strict-builder >=0.4.5.3 && <0.5,
    case-insensitive >=1.2 && <2,
    containers >=0.6.2 && <0.7,
    distillery >=0.1 && <0.2,
    hashable >=1 && <2,
    http-client >=0.6 && <0.8,
    http-client-tls >=0.3.5 && <0.4,
    mason >=0.2 && <0.3,
    megaparsec >=8.0 && <10,
    mtl >=2.2.2 && <2.3,
    profunctors >=5.5.2 && <6,
    punycode >=2.0 && <2.1,
    selective >=0.4 && <0.5,
    text >=1 && <2,
    time >=1.9 && <2,
    transformers >=0.5 && <0.6,
    unordered-containers >=0.2.10 && <0.3,
    uuid >=1.3 && <2,
    vector >=0.12 && <0.13
